--- a/src/pages/pseudo-clases/focus-target-has.html
+++ b/src/pages/pseudo-clases/focus-target-has.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/pseudo-clases.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../../css/focus-target-has.css">
+    <title>focus-target-has</title>
 </head>
 
 <body>
