refactor: improve HTML structure and CSS styles for dashboard sections

--- a/src/pages/Reto 2/index.html
+++ b/src/pages/Reto 2/index.html
@@ -19,9 +19,10 @@
 
     <div class="main-content">
         <div class="section">
-            <h3>Estado del Sistema</h3>
-            <p><span style="color: green;">●</span> Activo &nbsp;&nbsp; <span style="color: red;">●</span> 1 Alerta</p>
-        </div>
+      <h3>Estado del Sistema</h3>
+      <span class="status active">● Activo</span>
+      <span class="status alert">● 1 Alerta</span>
+    </div>
 
         <div class="section tasks">
             <h3>Tareas Pendientes</h3>
@@ -42,8 +43,7 @@
         </div>
 
         <div class="section info">
-            <h3>Información</h3>
-            <i>ℹ️</i>
+            <h3>Información ℹ️</h3>
       <span>Este dashboard muestra secciones accesibles de CSS adaptado.</span>
         </div>
     </div>
