--- a/src/pages/ApiElecciones/src/pages/login.html
+++ b/src/pages/ApiElecciones/src/pages/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Elecciones</title>
 </head>
 
@@ -25,7 +25,7 @@
         </div> -->
     </div>
 
-    <script src="./js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
