feat: add candidate cards functionality with data fetching and click interactions

--- a/src/pages/ApiElecciones/src/pages/main-page.html
+++ b/src/pages/ApiElecciones/src/pages/main-page.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenido!</h1>
+    <div id="container"></div>
 
 
 
@@ -15,6 +15,6 @@
 
 
 
-    <script src="../js/main.js"></script>
+    <script src="../js/candidates.js"></script>
 </body>
 </html>
